fix loader z-index for the time series section

--- a/src/app-pages/map/components/map-details/mapDetails.scss
+++ b/src/app-pages/map/components/map-details/mapDetails.scss
@@ -96,7 +96,7 @@
   position: -webkit-sticky; 
   position: sticky;
   top: 0;
-  z-index: 1100;
+  z-index: 11;
   display: flex;
   align-items: center;
 }
